# reliable-crs-eval

./: .gitignore  README.md  export-data.py  power_analsis.py  pyproject.toml  reliability-analysis.py  structure_analysis.py
data/: annotations.csv
scripts/: power_analysis.py  reliability_analysis.py  structure_analysis.py
