[project]
authors = [{ name = "annonymous", email = "annonymous@annonymous.com" }]
dependencies = []
name = "reliable-crs-eval"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
reliable_crs_eval = { path = ".", editable = true }

[tool.pixi.tasks]
