[project]
authors = [{ name = "annonymous", email = "annonymous@annonymous.com" }]
dependencies = ["krippendorff>=0.8.2,<0.9"]
name = "reliable-crs-eval"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
reliable_crs_eval = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.3.3,<3"
python = ">=3.14.2,<3.15"
sqlalchemy = ">=2.0.45,<3"
scipy = ">=1.17.0,<2"
matplotlib = ">=3.10.8,<4"
seaborn = ">=0.13.2,<0.14"
scikit-learn = ">=1.8.0,<2"
