[project]
authors = [{ name = "Michael Müller", email = "michael.m.mueller@uibk.ac.at" }]
name = "reliable-crs-eval"
requires-python = ">= 3.11"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"
numpy = ">=2.0,<3"
pandas = ">=2.3.3,<3"
scipy = ">=1.17.0,<2"
statsmodels = ">=0.14,<1"
matplotlib = ">=3.10.8,<4"
seaborn = ">=0.13.2,<0.14"
jinja2 = ">=3,<4"

[tool.pixi.pypi-dependencies]
krippendorff = ">=0.8.2,<0.9"

[tool.pixi.tasks]
reliability = { cmd = "python scripts/reliability_analysis.py", description = "IRR analysis → output/irr_summary.tex" }
power = { cmd = "python scripts/power_analysis.py", description = "Power analysis figures → output/" }
structure = { cmd = "python scripts/structure_analysis.py", description = "Correlation heatmap → output/correlation_heatmap.pdf" }
all = { depends-on = ["reliability", "power", "structure"] }
